# amalitechmllab

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: config.toml
data/features/: X_test.parquet  X_train.parquet  X_val.parquet  scaler.pkl  y_test.parquet  y_train.parquet  y_val.parquet
data/processed/: Flight_Price_Dataset_of_Bangladesh.parquet
docs/: step1_data_exploration.md  step2_data_cleaning.md  step3_feature_engineering.md  step4_eda.md  step5_baseline_model.md  step6_advanced_models.md  step7_interpretation.md
models/: decision_tree.pkl  gradient_boosting.pkl  lasso.pkl  linear_regression.pkl  ridge.pkl
notebooks/: 01_data_exploration.ipynb  02_data_cleaning.ipynb  03_feature_engineering.ipynb  04_eda.ipynb  05_baseline_model.ipynb  06_advanced_models.ipynb  07_interpretation.ipynb
reports/: metrics_linear_regression.json  model_comparison.json
scripts/: update_nb_03.py  update_notebook_06.py
src/evaluation/: metrics.py
src/features/: cleaning.py  eda.py  engineering.py  exploration.py
src/interpretation/: importance.py  insights.py  plots.py
src/models/: advanced.py  trainer.py
src/pipeline/: runner.py
src/serving/: predict.py  predictor.py
src/tuning/: optuna_tuner.py
src/utils/: config.py  logging.py  mlflow_utils.py
tests/: conftest.py  test_advanced.py  test_cleaning.py  test_engineering.py  test_engineering_integration.py  test_metrics.py  test_pipeline.py  test_trainer.py
